--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port = 8181
+application.jwt.secretKey=securesecuresecuresecuresecuresecuresecure
+application.jwt.tokenPrefix=Bearer 
+application.jwt.tokenExpirationAfterDays=10
